    killed at an unfortunate time.

  * S3QL programs no longer create an empty file in the default log
    file location if a custom log file is specified with --log.

  * contrib/benchmark.py is now working again - thanks to
    davidthomson@gmail.com.

  * If a backend returns corrupted data, mount.s3ql no longer crashes
    but switches to read-only operation.

2013-08-27, S3QL 2.4

  * Attempts to upgrade a file system that is already at the newest
    revision no longer render the local metadata copy unusable.

  * Google storage bucket names containing dots no longer cause
    problems with SSL certificate validation.

  * Fixed crash when statvfs() is called on an almost empty file
    system (which may happen automatically when using some desktop
    environments, resulting in an immediate crash after mounting an
    empty filesystem).

  * There is a new "swiftks" backend for OpenStack/Swift servers that
    supports keystone authentication and allows specification of the
    desired storage region.

  * Eliminated a race condition that could lead to mount.s3ql crashing
    with a "KeyError in collections/abc.py" under some circumstances.

  * Fixed a crash that could occur when trying to clean up after
    receiving a connection or server error when uploading an object.

2013-07-18, S3QL 2.3

  * Reading the file system passphrase from the authinfo2 file
    is now working again.

  * The precedence of the authinfo2 sections has been fixed to agree
    with the documentation: later entries override earlier entries
    rather than the other way around.

  * Fixed a problem with mount.s3ql not recognizing the upgraded
    revision when `s3qladm upgrade` was run with a different
    --cachedir argument.

  * Fixed a crash of the s3 backend when multiple objects are deleted
    and the s3 connection needs to be re-established.

2013-07-12, S3QL 2.2

  * Eliminated a race condition that resulted in an apparent loss of